--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/bf4e32a97e.js" crossorigin="anonymous"></script>
     <title>Sittin Group</title>
 </head>
 <body>
@@ -49,7 +50,6 @@
     <main>
 
         <div class="backgroundImg">
-            <!-- <img src="img/Group 57@2x.png" height="323" width="100%"> -->
             <div class="top-left">
                 OUR CAPSTONE
                 <div class="imgPara">To become regarded by the world’s biggest brands, as the sales and distribution
@@ -60,11 +60,11 @@
 
         <div class="section2">
             <ul class="btn-group">
-                <li><a class="btn-background" href="#"><img src="img/Group 27.png"></a></li>
-                <li><a class="btn-background" href="#"><img src="img/Group 29.png"></a></li>
-                <li><a class="btn-background" href="#"><img src="img/Group 31.png"></a></li>
-                <li><a class="btn-background" href="#"><img src="img/Group 32.png"></a></li>
-                <li><a class="btn-background" href="#"><img src="img/Group 33.png"></a></li>
+                <li><a class="btn-background blue" id="product">PRODUCT ORIGIN</a></li>
+                <li><a class="btn-background green" id="warehouse">WAREHOUSE</a></li>
+                <li><a class="btn-background yellow" href="#">DISTRIBUTION</a></li>
+                <li><a class="btn-background orange" href="#">DESTINATION</a></li>
+                <li><a class="btn-background rose" href="#">GROWTH INTEGRATION</a></li>
             </ul>
             <div class="imgPara2">
                 <img src="img/Group 76@2x.png" height="180" width="100%">
@@ -73,7 +73,7 @@
                     volume pallet loads, as well as single product loads.
                 </div>
                 <p>Our warehousing services include:</p>
-                <ul>
+                <ul class="list">
                     <li>Year round / Seasonal storage</li>
                     <li>ِAutomated storing and inventory managment</li>
                     <li>Pre-retailing and co-packing</li>
@@ -81,6 +81,17 @@
                     <li>Inventory insurance and safeguarding</li>
                     <li>Periodical quality inspections for your stored products and before orders handling</li>
                 </ul>
+            </div>
+            <div class="imgPara222 hide">
+                <img src="img/Group 45@2x.png" height="180" width="100%">
+                <div class="whiteBackground">
+                    <h4>WAREHOUSE</h4>
+                    <div class="para">We have a fully-fledged range of warehousing facilities and services that are far from the
+                        business-as-usual. All of our facilities are fully automated and we also utilize the most advanced handling systems
+                        that can contribute high volume pallet loads, as well as single product loads.
+                    </div>
+                    <a>READ MORE</a>
+                </div>
             </div>
         </div>
 
@@ -91,19 +102,20 @@
             </p>
             <div class="wrap">
 
-                <div id="arrow-left" class="arrow"><img class="leftArrowImg" src="img/Group 92.png"></div>
+                <div id="arrow-left" class="arrow"><i class="fas fa-arrow-circle-left fa-2x leftArrowImg"></i></div>
 
-                <div class="overImg1 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg2 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg3 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg4 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg5 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg6 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg7 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg8 carousel-item"><img src="img/Rectangle 37.png"></div>
-                <div class="overImg9 carousel-item"><img src="img/Rectangle 37.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 38.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 39.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 40.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 38.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 39.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 40.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 38.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 39.png"></div>
+                <div class="carousel-item"><img class="slider" src="img/Rectangle 40.png"></div>
+                
 
-                <div id="arrow-right" class="arrow"><img class="rightArrowImg" src="img/Group 88.png"</div>
+                <div id="arrow-right" class="arrow"><i class="fas fa-arrow-circle-right fa-2x rightArrowImg"></i></div>
 
             </div>
         </div>
@@ -115,10 +127,10 @@
             <div class="links">
                 <p class="heading">QUICK LINKS</p>
                 <ul>
-                    <li><a htef="#">Services</a></li>
-                    <li><a htef="#">Sales Zones</a></li>
-                    <li><a htef="#">Warehouse</a></li>
-                    <li><a htef="#">Product Origin</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Sales Zones</a></li>
+                    <li><a href="#">Warehouse</a></li>
+                    <li><a href="#">Product Origin</a></li>
                 </ul>
             </div>
             <div class="newsletter">
@@ -129,9 +141,9 @@
             <div class="follow">
                 <p class="heading">FOLLOW US</p>
                 <ul>
-                    <li><a href=""><img src="img/Group 64.png"></a></li>
-                    <li><a href=""><img src="img/Group 67.png"></a></li>
-                    <li class="inst"><a href=""><img src="img/Path 64.png"></a></li>
+                    <li><a href=""><span class="fbCircle"><i class="fab fa-facebook-f fa-lg fb"></i></span></a></li>
+                    <li><a href=""><span class="iconCircle"><i class="fab fa-twitter fa-lg twitter"></i></span></a></li>
+                    <li><a href=""><span class="iconCircle"><i class="fab fa-instagram fa-lg inst"></i></span></a></li>
                 </ul>
             </div>
         </div>
@@ -142,6 +154,7 @@
 
     <script src="script/slider.js"></script>
     <script src="script/navbar.js"></script>
+    <script src="script/toggle.js"></script>
     
 </body>
 </html>
